[gd_scene load_steps=6 format=3 uid="uid://c4sgj3evjejct"]

[ext_resource type="Script" path="res://World/Objects/Nature/Effects/LeavesFallingEffect.gd" id="1_lq2jh"]

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Leaves/Leaf1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="1"]
resource_name = "leaves falling effect"
length = 1.5
step = 0.01

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aohna"]
_data = {
"RESET": SubResource("2"),
"leaves falling effect": SubResource("1")
}

[sub_resource type="CanvasItemMaterial" id="4"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="LeavesFallingEffect" type="Node2D"]
script = ExtResource("1_lq2jh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aohna")
}

[node name="Leaves" type="Node2D" parent="."]

[node name="Leaf1" type="Sprite2D" parent="Leaves"]
material = SubResource("4")
scale = Vector2(4, 4)
hframes = 12

[node name="Leaf2" type="Sprite2D" parent="Leaves"]
scale = Vector2(4, 4)
hframes = 12

[node name="Leaf3" type="Sprite2D" parent="Leaves"]
scale = Vector2(4, 4)
hframes = 12

[node name="Leaf4" type="Sprite2D" parent="Leaves"]
scale = Vector2(4, 4)
hframes = 12

[node name="Leaf5" type="Sprite2D" parent="Leaves"]
scale = Vector2(4, 4)
hframes = 12

[node name="Leaf6" type="Sprite2D" parent="Leaves"]
position = Vector2(-32.935, 10)
scale = Vector2(4, 4)
hframes = 12

[node name="Leaf7" type="Sprite2D" parent="Leaves"]
scale = Vector2(4, 4)
hframes = 12

[node name="Leaf8" type="Sprite2D" parent="Leaves"]
scale = Vector2(4, 4)
hframes = 12

[node name="Leaf9" type="Sprite2D" parent="Leaves"]
position = Vector2(-12, 0)
rotation = 2.0944
scale = Vector2(4, 4)
hframes = 12

[node name="Leaf10" type="Sprite2D" parent="Leaves"]
position = Vector2(-40, -16)
rotation = 2.96706
scale = Vector2(4, 4)
hframes = 12
